[package]
name = "jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde ={ version = "1",features = ["derive"] }
serde_json={version="1",features = ["preserve_order"]}
anyhow = "1"
jsonwebtoken = "9"
clap = { version = "4", features = ["derive"] }
hmac-sha256 = "1"
base64 = "0.22"
